27/2/2018
=========
-Ported mameH to 0.37b7 adding mess stuff
-Added load_image for mess
-Implemented get_filenames in mess.java enough for coleco system at least

26/2/2018
=========
-IODevice structure added in mess.h
-Added CONS (gamedriver macro) . Project is now compileable (with a few todos in coleco machine according loading)
-Some work on mess/msdos.java for detecting system

25/2/2018
=========
-Intial project creation
-Started working on coleco system (Still source is not compileable)
-Some modifications in driverH to support mess functions
-Finished tms9928a vidhrdw needed for coleco system